<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_update_img"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/workspace" />
            <EditText
                android:id="@+id/username_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>
            <EditText
                android:id="@+id/mail_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
            <EditText
                android:id="@+id/phone_number_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"/>
            <Button
                android:id="@+id/validate_update_profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate"
                android:backgroundTint="@color/teal_200"
                android:drawableEnd="@drawable/ic__check"/>
        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>