<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_post_property"
    android:backgroundTint="#F6F4F4"
    app:cardBackgroundColor="#FFF"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

           <ImageView
                android:id="@+id/apartment_profile_imgv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/apartment" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/apartment_price_tv"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/apartment_profile_imgv"
                android:layout_alignEnd="@+id/apartment_profile_imgv"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_button_price_on_image"
                android:text="@string/_190000_dh"
                android:textColor="@color/black"
                android:textSize="11sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/apartment_location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/location_apartment"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal|center"
            android:orientation="horizontal">

            <ImageButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_bed" />

            <TextView
                android:id="@+id/apartment_bed_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/_3"
                android:textSize="12sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_bathroom" />

            <TextView
                android:id="@+id/apartment_bathroom_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/_2"
                android:textSize="12sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_surface" />

            <TextView
                android:id="@+id/apartment_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surface"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14_m"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>